<resources>
    <string name="app_name">Money Record</string>
    <string name="total_principal">총자산</string>
    <string name="total_evaluation">총평가액</string>
    <string name="total_rate">총수익율</string>
    <string name="group">그룹</string>
    <string name="save">저장</string>
    <string name="delete">삭제</string>
    <string name="select">선택</string>
    <string name="cancel">취소</string>
    <string name="date">날짜</string>
    <string name="details">내역</string>
    <string name="amount">금액</string>
    <string name="institute">기관</string>
    <string name="description">설명</string>
    <string name="card_number">카드번호</string>
    <string name="currency">통화</string>
    <string name="exchange_rate">환율</string>
    <string name="foreign_principal">외화 원금</string>
    <string name="krw_evaluation">원화 평가금액</string>
    <string name="update_evaluation">평가액 반영</string>
    <string name="update_inout">입출금액 반영</string>
    <string name="profit">이익율</string>
    <string name="name">이름</string>
    <string name="company">회사</string>
    <string name="kind">종류</string>
    <string name="krw">원화</string>
    <string name="income">수입</string>
    <string name="spend">지출</string>
    <string name="deposit_amount">입금액</string>
    <string name="withdraw_amount">출금액</string>
    <string name="deposit_account">입금계좌</string>
    <string name="withdraw_account">출금계좌</string>
    <string name="principal">원금</string>
    <string name="evaluation">평가금액</string>
    <string name="withdraw_date">인출일</string>
    <string name="account_number">계좌번호</string>
    <string name="account_card">계좌 / 카드</string>
    <string name="main_category">주카테고리</string>
    <string name="sub_category">부카테고리</string>
    <string name="payment_method">지불방식</string>
    <string name="forward">forward</string>
    <string name="backward">backward</string>
    <string name="auto">자동생성</string>
    <string name="text"> </string>
    <string name="yearmonth">년월</string>
    <string name="db_file_list">DB 파일 목록</string>
    <string name="title_spend">가계부 : 지출</string>
    <string name="title_income">가계부 : 수입</string>
    <string name="title_statistics">가계부 : 통계</string>
    <string name="title_home">Home</string>
    <string name="title_book">가계부</string>
    <string name="title_accounts">계좌</string>
    <string name="title_management">관리</string>
    <string name="title_management_user">사용자 관리</string>
    <string name="title_management_group">그룹 관리</string>
    <string name="title_management_account">계좌 관리</string>
    <string name="title_management_card">카드 관리</string>
    <string name="title_management_categorymain">주카테고리 관리</string>
    <string name="title_management_categorysub">부카테고리 관리</string>
    <string name="title_management_db">데이터베이스 관리</string>
    <string name="title_select_date">날짜 선택</string>
    <string name="title_select">선택</string>
    <string name="title_inout_krw">입출금 : 원화</string>
    <string name="title_inout_foreign">입출금 : 외화</string>
    <string name="toast_db_del_ok">DB File을 삭제하였습니다.</string>
    <string name="toast_db_del_error">DB File을 삭제하지 못했습니다.</string>
    <string name="toast_db_open_error">DB File을 열지 못했습니다.</string>
    <string name="toast_db_download_ok">DB File을 Download 했습니다.</string>
    <string name="toast_db_download_error">DB File을 Download 하지 못했습니다.</string>
    <string name="toast_db_no_exist_error">DB File이 없습니다.</string>
    <string name="toast_db_upload_ok">DB File이 Upload 되었습니다.</string>
    <string name="toast_db_upload_error">DB File이 Upload 되지 았않습니다.</string>
    <string name="toast_date_error">오늘 이전 날짜로 선택해 주세요.</string>
    <string name="toast_warning_input">입력값을 확인해 주세요.</string>
    <string name="toast_save_success">저장되었습니다.</string>
    <string name="toast_delete_success">삭제되었습니다.</string>
    <string name="toast_transfer_success">이체되었습니다.</string>
    <string name="toast_login_success">로그인되었습니다.</string>
    <string name="toast_login_error">로그인에 실패하였습니다.</string>
    <array name="category">
        <item name="spend">spend</item>
        <item name="income">income</item>
    </array>
    <array name="type">
        <item name="cash">cash</item>
        <item name="card">card</item>
    </array>
    <array name="currency">
        <item name="usd">USD</item>
        <item name="cny">CNY</item>
        <item name="eur">EUR</item>
        <item name="JPY">JPY</item>
        <item name="hkd">HKD</item>
    </array>
</resources>
