<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
            android:id="@+id/navigation_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/title_home"/>

    <item
            android:id="@+id/navigation_book"
            android:icon="@drawable/baseline_book_black_18dp"
            android:title="@string/title_book"/>

    <item
            android:id="@+id/navigation_accounts"
            android:icon="@drawable/baseline_account_balance_wallet_black_18dp"
            android:title="@string/title_accounts"/>

    <item
            android:id="@+id/navigation_management"
            android:icon="@drawable/baseline_supervisor_account_black_18dp"
            android:title="@string/title_management"/>
</menu>
