<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <import type="com.watering.moneyrecord.model.Converter"/>
        <variable name="viewmodel" type="com.watering.moneyrecord.viewmodel.ViewModelEditInoutKRW"/>
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/fragment_edit_spend"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <TextView
                android:text="@string/principal"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:id="@+id/text_1_fragment_edit_inout_krw"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                app:layout_constraintTop_toTopOf="@+id/edit_principal_fragment_edit_inout_krw"
                app:layout_constraintBottom_toBottomOf="@+id/edit_principal_fragment_edit_inout_krw"/>
        <TextView
                android:text="@string/income"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:id="@+id/text_2_fragment_edit_inout_krw" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp" app:layout_constraintTop_toTopOf="@+id/edit_income_fragment_edit_inout_krw"
                app:layout_constraintBottom_toBottomOf="@+id/edit_income_fragment_edit_inout_krw"/>

        <EditText
                android:id="@+id/edit_income_fragment_edit_inout_krw"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:ems="10"
                android:enabled="false"
                android:inputType="numberSigned|number"
                android:text="@{Converter.intToStr(viewmodel.income)}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/text_2_fragment_edit_inout_krw"
                app:layout_constraintTop_toBottomOf="@+id/button_date_fragment_edit_inout_krw" />

        <EditText
                android:id="@+id/edit_deposit_fragment_edit_inout_krw"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:ems="10"
                android:inputType="numberSigned|number"
                android:text="@={Converter.intToStr(viewmodel.deposit)}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/text_3_fragment_edit_inout_krw"
                app:layout_constraintTop_toBottomOf="@+id/edit_income_fragment_edit_inout_krw" />
        <TextView
                android:text="@string/deposit_amount"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:id="@+id/text_3_fragment_edit_inout_krw" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                app:layout_constraintTop_toTopOf="@+id/edit_deposit_fragment_edit_inout_krw"
                app:layout_constraintBottom_toBottomOf="@+id/edit_deposit_fragment_edit_inout_krw"/>

        <EditText
                android:id="@+id/edit_spend_fragment_edit_inout_krw"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:ems="10"
                android:enabled="false"
                android:inputType="numberSigned|number"
                android:text="@{Converter.intToStr(viewmodel.spend)}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/text_4_fragment_edit_inout_krw"
                app:layout_constraintTop_toBottomOf="@+id/edit_deposit_fragment_edit_inout_krw" />
        <TextView
                android:text="@string/spend"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:id="@+id/text_4_fragment_edit_inout_krw" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                app:layout_constraintTop_toTopOf="@+id/edit_spend_fragment_edit_inout_krw"
                app:layout_constraintBottom_toBottomOf="@+id/edit_spend_fragment_edit_inout_krw"/>

        <TextView
                android:text="@string/withdraw_amount"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:id="@+id/text_5_fragment_edit_inout_krw"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                app:layout_constraintTop_toTopOf="@+id/edit_withdraw_fragment_edit_inout_krw"
                app:layout_constraintBottom_toBottomOf="@+id/edit_withdraw_fragment_edit_inout_krw"/>
        <TextView
                android:text="@string/evaluation"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:id="@+id/text_6_fragment_edit_inout_krw" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                app:layout_constraintTop_toTopOf="@+id/edit_evaluation_fragment_edit_inout_krw"
                app:layout_constraintBottom_toBottomOf="@+id/edit_evaluation_fragment_edit_inout_krw"/>

        <EditText
                android:id="@+id/edit_withdraw_fragment_edit_inout_krw"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:ems="10"
                android:inputType="numberSigned|number"
                android:text="@={Converter.intToStr(viewmodel.withdraw)}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/text_5_fragment_edit_inout_krw"
                app:layout_constraintTop_toBottomOf="@+id/edit_spend_fragment_edit_inout_krw" />

        <EditText
                android:id="@+id/edit_principal_fragment_edit_inout_krw"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:ems="10"
                android:enabled="false"
                android:inputType="numberSigned|number"
                android:text="@{Converter.intToStr(viewmodel.principal)}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/text_1_fragment_edit_inout_krw"
                app:layout_constraintTop_toBottomOf="@+id/edit_withdraw_fragment_edit_inout_krw" />

        <EditText
                android:id="@+id/edit_evaluation_fragment_edit_inout_krw"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:ems="9"
                android:inputType="numberSigned|number"
                android:text="@={Converter.intToStr(viewmodel.evaluation)}"
                app:layout_constraintStart_toEndOf="@+id/text_6_fragment_edit_inout_krw"
                app:layout_constraintTop_toBottomOf="@+id/edit_principal_fragment_edit_inout_krw" />
        <Button
                android:text="@={viewmodel.date}"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/button_date_fragment_edit_inout_krw"
                android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                app:layout_constraintStart_toEndOf="@+id/text_7_fragment_edit_inout_krw" android:layout_marginStart="8dp"/>
        <TextView
                android:text="@string/date"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:id="@+id/text_7_fragment_edit_inout_krw"
                app:layout_constraintTop_toTopOf="@+id/button_date_fragment_edit_inout_krw"
                app:layout_constraintBottom_toBottomOf="@+id/button_date_fragment_edit_inout_krw"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"/>

        <Button
                android:id="@+id/button_update_evaluation_fragment_edit_inout_krw"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/update_inout"
                app:layout_constraintBottom_toBottomOf="@+id/edit_evaluation_fragment_edit_inout_krw"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/edit_evaluation_fragment_edit_inout_krw"
                app:layout_constraintTop_toTopOf="@+id/edit_evaluation_fragment_edit_inout_krw" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>