<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <import type="com.watering.moneyrecord.model.Converter"/>
        <variable name="viewmodel" type="com.watering.moneyrecord.viewmodel.ViewModelEditSpend"/>
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/fragment_edit_spend"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <TextView
                android:text="@string/account_card"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:id="@+id/text_pay2_fragment_edit_spend" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                app:layout_constraintTop_toTopOf="@+id/spinner_pay2_fragment_edit_spend"
                app:layout_constraintBottom_toBottomOf="@+id/spinner_pay2_fragment_edit_spend"/>
        <TextView
                android:text="@string/sub_category"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:id="@+id/textView7"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                app:layout_constraintTop_toTopOf="@+id/spinner_categorysub_fragment_edit_spend"
                app:layout_constraintBottom_toBottomOf="@+id/spinner_categorysub_fragment_edit_spend"/>
        <TextView
                android:text="@string/date"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:id="@+id/textView" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp" app:layout_constraintTop_toTopOf="@+id/button_date_fragment_edit_spend"
                app:layout_constraintBottom_toBottomOf="@+id/button_date_fragment_edit_spend"/>
        <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:text="@={viewmodel.spend.date}"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="8dp" android:id="@+id/button_date_fragment_edit_spend"
                app:layout_constraintStart_toEndOf="@+id/textView" android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"/>
        <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@={viewmodel.spend.details}"
                android:ems="10"
                android:id="@+id/edit_details_fragment_edit_spend" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/button_date_fragment_edit_spend" android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toEndOf="@+id/textView2"
                android:layout_marginStart="8dp" android:inputType="text"/>
        <TextView
                android:text="@string/details"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:id="@+id/textView2" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                app:layout_constraintTop_toTopOf="@+id/edit_details_fragment_edit_spend"
                app:layout_constraintBottom_toBottomOf="@+id/edit_details_fragment_edit_spend"/>

        <EditText
                android:id="@+id/edit_amount_fragment_edit_spend"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:ems="10"
                android:inputType="numberSigned|number"
                android:text="@={Converter.intToStr(viewmodel.spend.amount)}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textView3"
                app:layout_constraintTop_toBottomOf="@+id/edit_details_fragment_edit_spend" />
        <TextView
                android:text="@string/amount"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:id="@+id/textView3" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                app:layout_constraintTop_toTopOf="@+id/edit_amount_fragment_edit_spend"
                app:layout_constraintBottom_toBottomOf="@+id/edit_amount_fragment_edit_spend"/>
        <Spinner
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/spinner_categorymain_fragment_edit_spend"
                android:entries="@{viewmodel.listOfMain}"
                android:selectedItemPosition="@={ viewmodel.indexOfMain }"
                app:layout_constraintStart_toEndOf="@+id/textView6"
                android:layout_marginStart="8dp" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/edit_amount_fragment_edit_spend"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"/>
        <Spinner
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/spinner_categorysub_fragment_edit_spend"
                android:entries="@{viewmodel.listOfSub}"
                android:selectedItemPosition="@={ viewmodel.indexOfSub }"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/spinner_categorymain_fragment_edit_spend"
                app:layout_constraintStart_toEndOf="@+id/textView7" android:layout_marginStart="8dp"/>

        <TextView
                android:text="@string/main_category"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:id="@+id/textView6"
                app:layout_constraintTop_toTopOf="@+id/spinner_categorymain_fragment_edit_spend"
                app:layout_constraintBottom_toBottomOf="@+id/spinner_categorymain_fragment_edit_spend"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"/>
        <TextView
                android:text="@string/payment_method"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:id="@+id/textView5" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                app:layout_constraintTop_toTopOf="@+id/spinner_pay1_fragment_edit_spend"
                app:layout_constraintBottom_toBottomOf="@+id/spinner_pay1_fragment_edit_spend"/>
        <Spinner
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/spinner_pay1_fragment_edit_spend"
                android:entries="@array/type"
                android:selectedItemPosition="@={ viewmodel.indexOfPay1 }"
                app:layout_constraintStart_toEndOf="@+id/textView5" android:layout_marginStart="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/spinner_categorysub_fragment_edit_spend"/>
        <Spinner
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:entries="@{viewmodel.listOfPay2}"
                android:selectedItemPosition="@={ viewmodel.indexOfPay2 }"
                android:id="@+id/spinner_pay2_fragment_edit_spend" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                app:layout_constraintStart_toEndOf="@+id/text_pay2_fragment_edit_spend"
                android:layout_marginStart="8dp" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/spinner_pay1_fragment_edit_spend"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>